Fix KM/Project template selection is too small and has weird scrolling

--- a/app-wizard/scss/elements/_forms.scss
+++ b/app-wizard/scss/elements/_forms.scss
@@ -298,7 +298,7 @@ select {
         }
     }
 
-    .typehints {
+    & > .typehints {
         @include border-radius($border-radius);
         background: #fff;
         position: absolute;
